# ComfyUI-SettingsToText

./: README.md  SettingsToText.py  __init__.py  pyproject.toml
.github/workflows/: publish.yml
js/: settings_to_text.js
